Fix caption spinner causing a bouncing scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -234,6 +234,7 @@ code {
     background-position: center;
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
 
 #send_but {
